# LorBot.v2

./: .gitignore  .replit  LorBot.py  adminHelpers.py  lastVersionCommands.py  pyproject.toml  redditAPI.py  somecommands.py  twistedFateDiscord.py
LorBot.v1/: komendy.txt  main.py  mileslowka.txt  music.py
TwistedFate/: Summoner.py  config.json  const.py  main.py  test.json  test.py
assets/: tfConfig.json
