[tool.poetry]
name = "repl_python3_LorBotv2-1"
version = "0.1.0"
description = ""
authors = ["Szparaxd <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
replit = "^3.2.4"
youtube_dl = "^2021.12.17"
coloredlogs = "^15.0.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
